--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.3.5",
     "flowbite": "^1.6.5",
     "flowbite-vue": "^0.0.10",
+    "moment": "^2.29.4",
     "vue": "^3.2.47",
     "vue-draggable-next": "^2.1.1",
     "vue-router": "^4.1.6",
