--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^3.2.47",
     "vue-draggable-next": "^2.1.1",
     "vue-router": "^4.1.6",
+    "vue-search-select": "^3.1.0",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
