--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue-draggable-next": "^2.1.1",
     "vue-router": "^4.1.6",
     "vue-search-select": "^3.1.0",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
